--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@tabler/icons-react": "^2.42.0",
+        "@tanstack/react-query": "^5.8.9",
+        "@tanstack/react-query-devtools": "^5.8.9",
+        "axios": "^1.6.2",
         "next": "14.0.3",
+        "next-query-params": "^5.0.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "use-query-params": "^2.2.1"
     },
     "devDependencies": {
         "@commitlint/cli": "^18.4.3",
