--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@tanstack/react-query": "^5.8.9",
         "@tanstack/react-query-devtools": "^5.8.9",
         "axios": "^1.6.2",
+        "cookies-next": "^4.1.0",
         "next": "14.0.3",
         "next-query-params": "^5.0.0",
         "react": "^18.2.0",
