feat: added new code structure format to the kit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
     "eslint.enable": true,
     "eslint.validate": ["javascript", "typescript", "javascriptreact", "typescriptreact"],
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
+        "source.fixAll.eslint": "explicit"
     },
 
     // prettier extension setting
