--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     },
     "dependencies": {
         "@tabler/icons-react": "^2.42.0",
-        "@tanstack/react-query": "^5.8.9",
-        "@tanstack/react-query-devtools": "^5.8.9",
+        "@tanstack/react-query": "^5.13.4",
+        "@tanstack/react-query-devtools": "^5.13.4",
         "axios": "^1.6.2",
         "cookies-next": "^4.1.0",
         "next": "14.0.3",
@@ -32,19 +32,21 @@
         "@commitlint/cli": "^18.4.3",
         "@commitlint/config-conventional": "^18.4.3",
         "@svgr/webpack": "^8.1.0",
-        "@types/node": "^20.10.0",
-        "@types/react": "^18.2.39",
+        "@types/node": "^20.10.4",
+        "@types/qs": "^6.9.10",
+        "@types/react": "^18.2.42",
         "@types/react-dom": "^18.2.17",
-        "@typescript-eslint/eslint-plugin": "^6.13.1",
+        "@typescript-eslint/eslint-plugin": "^6.13.2",
         "autoprefixer": "^10.4.16",
-        "eslint": "^8.54.0",
+        "eslint": "^8.55.0",
         "eslint-config-next": "14.0.3",
-        "eslint-config-prettier": "^9.0.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.3",
-        "postcss": "^8.4.31",
+        "postcss": "^8.4.32",
         "prettier": "^3.1.0",
-        "tailwindcss": "^3.3.5",
-        "typescript": "^5.3.2"
+        "qs": "^6.11.2",
+        "tailwindcss": "^3.3.6",
+        "typescript": "^5.3.3"
     }
 }
