--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "@tabler/icons-react": "^2.42.0",
+        "@tabler/icons-react": "^2.44.0",
         "@tanstack/react-query": "^5.13.4",
-        "@tanstack/react-query-devtools": "^5.13.4",
+        "@tanstack/react-query-devtools": "^5.13.5",
         "axios": "^1.6.2",
         "cookies-next": "^4.1.0",
         "next": "14.0.3",
+        "next-intl": "^3.3.1",
         "next-query-params": "^5.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -34,7 +35,7 @@
         "@svgr/webpack": "^8.1.0",
         "@types/node": "^20.10.4",
         "@types/qs": "^6.9.10",
-        "@types/react": "^18.2.42",
+        "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.13.2",
         "autoprefixer": "^10.4.16",
@@ -44,7 +45,7 @@
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.3",
         "postcss": "^8.4.32",
-        "prettier": "^3.1.0",
+        "prettier": "^3.1.1",
         "qs": "^6.11.2",
         "tailwindcss": "^3.3.6",
         "typescript": "^5.3.3"
