--- a/package.json
+++ b/package.json
@@ -17,37 +17,37 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "@tabler/icons-react": "^2.44.0",
-        "@tanstack/react-query": "^5.14.2",
-        "@tanstack/react-query-devtools": "^5.14.5",
-        "axios": "^1.6.2",
-        "cookies-next": "^4.1.0",
+        "@tanstack/react-query": "^5.32.0",
+        "axios": "^1.6.8",
+        "cookies-next": "^4.1.1",
         "next": "14.0.3",
-        "next-intl": "^3.4.0",
+        "next-intl": "^3.12.0",
         "next-query-params": "^5.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "use-query-params": "^2.2.1"
     },
     "devDependencies": {
-        "@commitlint/cli": "^18.4.3",
-        "@commitlint/config-conventional": "^18.4.3",
+        "@commitlint/cli": "^18.6.1",
+        "@commitlint/config-conventional": "^18.6.3",
         "@svgr/webpack": "^8.1.0",
-        "@types/node": "^20.10.5",
-        "@types/qs": "^6.9.11",
-        "@types/react": "^18.2.45",
-        "@types/react-dom": "^18.2.18",
-        "@typescript-eslint/eslint-plugin": "^6.15.0",
-        "autoprefixer": "^10.4.16",
-        "eslint": "^8.56.0",
+        "@tanstack/react-query-devtools": "^5.32.0",
+        "@types/node": "^20.12.7",
+        "@types/qs": "^6.9.15",
+        "@types/react": "^18.3.1",
+        "@types/react-dom": "^18.3.0",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "autoprefixer": "^10.4.19",
+        "eslint": "^8.57.0",
         "eslint-config-next": "14.0.3",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.3",
-        "postcss": "^8.4.32",
-        "prettier": "^3.1.1",
-        "qs": "^6.11.2",
-        "tailwindcss": "^3.4.0",
-        "typescript": "^5.3.3"
+        "lint-staged": "^15.2.2",
+        "postcss": "^8.4.38",
+        "prettier": "^3.2.5",
+        "qs": "^6.12.1",
+        "tailwindcss": "^3.4.3",
+        "typescript": "^5.4.5"
     }
 }
